# NPB-RUST-UFPEL

./: .gitignore  .gitmodules  Cargo.toml  Makefile  test.ipynb  test.sh
results/: ep-pp.A.1.1.txt  ep-pp.A.1.10.txt  ep-pp.A.1.11.txt  ep-pp.A.1.13.txt  ep-pp.A.1.14.txt  ep-pp.A.1.15.txt  ep-pp.A.1.16.txt  ep-pp.A.1.18.txt  ep-pp.A.1.2.txt  ep-pp.A.1.21.txt  ep-pp.A.1.23.txt  ep-pp.A.1.24.txt  ep-pp.A.1.25.txt  ep-pp.A.1.26.txt  ep-pp.A.1.29.txt  ep-pp.A.1.30.txt  ep-pp.A.1.4.txt  ep-pp.A.1.7.txt  ep-pp.A.1.8.txt  ep-pp.A.4.1.txt  ep-pp.A.4.10.txt  ep-pp.A.4.13.txt  ep-pp.A.4.2.txt  ep-pp.A.4.23.txt  ep-pp.A.4.24.txt  ep-pp.A.4.25.txt  ep-pp.A.4.26.txt  ep-pp.A.4.27.txt  ep-pp.A.4.3.txt  ep-pp.A.4.30.txt  ep-pp.A.4.6.txt  ep-pp.A.4.8.txt  ep-pp.A.4.9.txt  ep-pp.A.8.1.txt  ep-pp.A.8.10.txt  ep-pp.A.8.11.txt  ep-pp.A.8.12.txt  ep-pp.A.8.13.txt  ep-pp.A.8.14.txt  ep-pp.A.8.18.txt  (+173 more)
results_cpp/: ep.A.8.1.txt  ep.A.8.11.txt  ep.A.8.12.txt  ep.A.8.17.txt  ep.A.8.19.txt  ep.A.8.22.txt  ep.A.8.24.txt  ep.A.8.25.txt  ep.A.8.26.txt  ep.A.8.29.txt  ep.A.8.3.txt  ep.A.8.30.txt  ep.A.8.4.txt  ep.A.8.5.txt  ep.A.8.6.txt  ep.A.8.7.txt  ep.S.1.10.txt  ep.S.1.12.txt  ep.S.1.18.txt  ep.S.1.19.txt  ep.S.1.21.txt  ep.S.1.23.txt  ep.S.1.27.txt  ep.S.1.28.txt  ep.S.1.29.txt  ep.S.1.8.txt  ep.S.8.10.txt  ep.S.8.11.txt  ep.S.8.13.txt  ep.S.8.2.txt  ep.S.8.22.txt  ep.S.8.24.txt  ep.S.8.26.txt  ep.S.8.29.txt  ep.S.8.3.txt  ep.S.8.5.txt  ep.S.8.8.txt  ep.S.8.9.txt  ep.W.1.11.txt  ep.W.1.13.txt  (+29 more)
results_fortran/: ep.A.8.11.txt  ep.A.8.12.txt  ep.A.8.13.txt  ep.A.8.14.txt  ep.A.8.15.txt  (+45 more)
(+301 files in other folders)
